# llvm-blockprofilecount

./: CMakeLists.txt  README.md
cmake/: performanceConfig.cmake.in
examples/: branches  branches.cc  branches.ll  branches.prof  calls  calls.cc  calls.ll  calls.prof  combined  combined.cc  combined.ll  combined.prof  helloworld  helloworld.cc  helloworld.ll  helloworld.prof  loops  loops.cc  loops.ll  loops.prof  run.sh
include/performance/: Pass.hpp
src/: Pass.cpp
